--- a/index.html
+++ b/index.html
@@ -3,39 +3,71 @@
 
 <head>
     <title>My Profile</title>
+    <link rel="shortcut icon" href="rg.jpg" type="image/x-icon">
+    <style>
+        nav {
+            background-color: rgb(191, 129, 48);
+
+        }
+
+        body {
+            background-color: rgb(220, 238, 238);
+        }
+
+        div {
+            background-color: rgb(167, 64, 64);
+        }
+
+        iframe {
+            background-image: url(rg.jpg);
+        }
+    </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <p> <strong> <i class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit Gaikwad &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<i
-                class="fa-solid fa-envelope"></i> &nbsp;&nbsp;rohit.b@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;<i class="fa-sharp fa-solid fa-mobile"></i> &nbsp;&nbsp;7219250465</strong></p>
+
 
 
 
 </head>
 
 <body>
+    <header>
+        <div>
+            <h3><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i
+                        class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit
+                    Gaikwad &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<i class="fa-solid fa-envelope"></i>
+                    &nbsp;&nbsp;rohit.b@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;<i class="fa-sharp fa-solid fa-mobile"></i> &nbsp;&nbsp;7219250465</strong></h3>
+        </div>
+    </header>
+
+
     <nav>
-        <a href="homePage.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="techStack.html" target="my frame">TechStack</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">College Detail</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="project.html" target="my frame">Project</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">Gallery</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-        <hr>
+        <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="homePage.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="techStack.html" target="my frame">TechStack</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="">College Detail</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="project.html" target="my frame">Project</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="">Gallery</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+        </h3>
+    </nav>
+    <hr>
 
 
-        <p><iframe name="my frame" height="500px" width="1000px"></iframe><br>
-        </p>
-        <hr>
-        <p>
-        <b>Follw Me On:</b>
+
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<iframe name="my frame" height="500px" width="1000px"></iframe><br>
+
+    <hr>
+    <footer><div>
+        <big><b>Follw Me On:</b></big>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href=""><i class="fa-brands fa-google"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href=""><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
-    
-    </p>
+        <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+    </div>
+    </footer>
 </body>
 
 </html>
