--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             background-color: rgb(226, 244, 250);
 
         }
+        big{
+            color: brown;
+        }
 
         h3 {
             color: blue;
@@ -70,7 +73,7 @@
     <hr>
     <footer>
         
-            <big><b>Follw Me On:</b></big>
+            <big><b>Follow Us:</b></big>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="https://www.linkedin.com/login"><i
