--- a/hobbies.html
+++ b/hobbies.html
@@ -26,7 +26,7 @@
                 to write, love to read!</p>
         </li>
     </ul>
-    <ul><li><h3>Board Games</h3><p>A survey shows that 24.6% programmers love to play serious board games. Playing board games is one of the best ways to connect with people. While a lot of people choose video games over this, but it just doesn’t give that personal feeling. This doesn’t mean that you cannot play board games online, there are sites where you can play it with people across the globe.</p></li></ul>
+    <ul><li><h3>Board Games</h3><p></p></li></ul>
 </body>
 
 </html>
