--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
     <nav>
         <h3>
             <center>
-                <a href="homePage.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="techStack.html" target="my frame">TechStack</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="education.html" target="my frame">Education</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="gallery.html" target="my frame">Gallery</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="project.html" target="my frame">Project</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="hobbies.html" target="my frame">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="">Others</a><br>
+                <a href="homePage.html" target="my frame">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="techStack.html" target="my frame">TECHSTACK</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="education.html" target="my frame">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                
+                <a href="project.html" target="my frame">PROJECT</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="hobbies.html" target="my frame">HOBBIES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="gallery.html" target="my frame">PERSONAL DETAIL</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="">OTHERS</a><br>
             </center>
         </h3>
     </nav>
