add the education detail
add the education detail

--- a/education.html
+++ b/education.html
@@ -2,50 +2,25 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
-    <style>
-        table,
-        tr,
-        th,
-        td {
-            border: 5px solid black;
-            border-collapse: collapse;
-        }
-    </style>
+    <title>Education</title>
+    
 </head>
 
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th>sr.no</th>
-                <th>Class</th>
-                <th>University</th>
-                <th>Year</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1.</td>
-                <td>MCA</td>
-                <td>Chatrapati Shivaji University</td>
-                <td>2022</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>BCA</td>
-                <td>Solapur University</td>
-                <td>2019</td>
-            </tr>
-            <tr>
-                <td>3.</td>
-                <td>HSC</td>
-                <td>Pune Board</td>
-                <td>2015</td>
-            </tr>
-        </tbody>
-    </table>
-
+    <h2>Career Objective</h2>
+    <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
+     <H2>Professional Summary</H2>
+     <p><ul>
+        <li>Having 1 year of experience in developing Single page Web Application using Angular8,HTML5,CSS3,Bootstrap5,JavaScript,TypeScript</li>
+        <li>Experience on working with version control system - GIT and GitHub</li>
+        <li>Experience working with JIRA for user stories and bug tracking</li>
+        <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li>
+        <li>Working exposure on ID's like VS Code and Notepad++</li>
+        <li>Good working experience under Agile methodologies environment</li>
+        <li>Experience in using Chrome Developer Tool for debugging and Troubleshooting the code</li>
+        <li>Knowledge of NodeJS</li>
+        <li>Ability to work with people at all levels in the program</li>
+    </ul></p>
 </body>
 
 </html>
