--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,9 @@
     </details>
     <details>
         <summary>My images</summary>
-        <a href="https://www.linkedin.com/login"><img src="rg.jpg" alt="image" sizes="" height="100px" width="100px"></a>
-        <img src="images1.jpg" alt=""height="100px" width="100px">
-        <img src="images2.jpg" alt=""height="100px" width="100px">
+        <img src="rg.jpg" alt="image" sizes="" height="300px" width="300px">
+        <img src="images1.jpg" alt=""height="300px" width="300px">
+        <img src="images2.jpg" alt=""height="300px" width="300px">
     </details>
 
 </body>
