--- a/education.html
+++ b/education.html
@@ -3,13 +3,19 @@
 
 <head>
     <title>Education</title>
+    <style>
+        .company{
+            color: brown;
+            background-color: aquamarine;
+        }
+    </style>
     
 </head>
 
 <body>
-    <h2>Career Objective</h2>
+    <h2 class="company">Career Objective</h2>
     <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
-     <H2>Professional Summary</H2>
+     <H2 class="company">Professional Summary</H2>
      <p><ul>
         <li>Having 1 year of experience in developing Single page Web Application using Angular8,HTML5,CSS3,Bootstrap5,JavaScript,TypeScript</li>
         <li>Experience on working with version control system - GIT and GitHub</li>
