--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 
 
         div {
-            background-color: rgb(232, 128, 37);
+            background-color: rgb(211, 190, 172);
         }
        iframe{
         background-color: blanchedalmond;
+       }
+       .name{
+        color: rgb(223, 16, 58);
+
        }
     </style>
 
@@ -39,8 +43,8 @@
     <header>
         <div>
             <center>
-                <h3><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i
-                            class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit
+                <h3><strong class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i
+                            class="fa-solid fa-user" >&nbsp;&nbsp;</i>Rohit
                         Gaikwad &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<i class="fa-solid fa-envelope"></i>
                         &nbsp;&nbsp;rohit.b@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;<i class="fa-sharp fa-solid fa-mobile"></i> &nbsp;&nbsp;7219250465</strong></h3>
