education summary add the text color and bacground color
education summary add the text color and bacground color

--- a/education.html
+++ b/education.html
@@ -8,16 +8,28 @@
             color: brown;
             background-color: aquamarine;
         }
+        #sub{
+            color: red;
+        }
+        div{
+            color: rgb(223, 11, 202);
+            background-color: rgba(163, 154, 141, 0.294);
+        }
+        #pvt{
+            color: green;
+            background-color: rgb(231, 176, 104);
+        }
     </style>
     
 </head>
 
 <body>
     <h2 class="company">Career Objective</h2>
-    <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
+    <p id="pvt">TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
      <H2 class="company">Professional Summary</H2>
-     <p><ul>
-        <li>Having 1 year of experience in developing Single page Web Application using Angular8,HTML5,CSS3,Bootstrap5,JavaScript,TypeScript</li>
+     
+     <div><p><ul>
+        <li>Having 1 year of experience in developing Single page Web Application using <span id="sub">Angular8</span> ,HTML5,CSS3,Bootstrap5,JavaScript,TypeScript</li>
         <li>Experience on working with version control system - GIT and GitHub</li>
         <li>Experience working with JIRA for user stories and bug tracking</li>
         <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li>
@@ -27,6 +39,7 @@
         <li>Knowledge of NodeJS</li>
         <li>Ability to work with people at all levels in the program</li>
     </ul></p>
+</div>
 </body>
 
 </html>
