--- a/techStack.html
+++ b/techStack.html
@@ -8,8 +8,8 @@
         tr,
         th,
         td {
-            border: 1px solid rgb(46, 32, 14);
-            border-collapse: collapse;
+          border-color: aqua;
+          border-style: solid;
         }
     </style>
 
