--- a/reg.html
+++ b/reg.html
@@ -4,7 +4,6 @@
 <head>
 
     <title>Registration Form</title>
-    <link rel="shortcut icon" href="images5.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         label {
@@ -14,16 +13,10 @@
             height: 10px;
 
         }
-        body{
-            background-image: url("images5.jpg");
-        }
-      
-        
     </style>
 </head>
 
 <body>
-    <h1>Registration Form</h1>
     <form>
         <table>
             <tr>
@@ -59,8 +52,8 @@
             </tr>
             <tr>
                 <td><label for="">MARRITIAL STATUS :</label></td>
-                <TD><input type="radio" name="MARRITIAL STATUS"><label> YES</label>
-                <input type="radio" name="MARRITIAL STATUS"><label>NO</label></TD>
+                <TD><input type="radio"><label> YES</label>
+                <input type="radio"><label>NO</label></TD>
             </tr>
             <tr>
                 <td><label>SKILLS :</label></td>
@@ -90,8 +83,8 @@
         </tr>
         </table>
     </form>
-    <footer>
-    <strong><big>FOLLOW US :</big></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <footer></footer>
+    <big>FOLLOW US :</big>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <a href=""><i class="fa-brands fa-facebook-f"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <a href=""><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <a href=""><i class="fa-brands fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
