text transform add
text transform add

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         }
         #nav_bar,a{
             font-size: 25px;
-            font-family:"Sofia", sans-serif ;
+            font-family:"Trirong", serif ;
+            text-transform: uppercase;
             
             
 
