add the text decoration
add the text decoration and use this property to the remove the underline the text

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             font-size: 25px;
             font-family:"Trirong", serif ;
             text-transform: uppercase;
+            text-decoration: none;
+
             
             
 
