--- a/techStack.html
+++ b/techStack.html
@@ -9,7 +9,7 @@
         th,
         td {
             border: 1px solid rgb(46, 32, 14);
-            border-collapse: collapse;
+            border-width: 3px;
         }
     </style>
 
