add border collapse and border color
add border collapse and border color

--- a/techStack.html
+++ b/techStack.html
@@ -10,6 +10,9 @@
         td {
             border: 1px solid rgb(46, 32, 14);
             border-width: 3px;
+            border-collapse:collapse ;
+            border-color: rgb(10, 9, 9);
+
         }
     </style>
 
