add the list style in ul list
add the list style in ul list

--- a/education.html
+++ b/education.html
@@ -19,6 +19,9 @@
             color: green;
             background-color: rgb(231, 176, 104);
         }
+        #ul_list{
+            list-style: square;
+        }
     </style>
     
 </head>
@@ -28,7 +31,7 @@
     <p id="pvt">TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH</p>
      <H2 class="company">Professional Summary</H2>
      
-     <div><p><ul>
+     <div><p><ul id="ul_list">
         <li>Having 1 year of experience in developing Single page Web Application using <span id="sub">Angular8</span> ,HTML5,CSS3,Bootstrap5,JavaScript,TypeScript</li>
         <li>Experience on working with version control system - GIT and GitHub</li>
         <li>Experience working with JIRA for user stories and bug tracking</li>
