add the font family property to the education page
add the font family property to the education page

--- a/education.html
+++ b/education.html
@@ -3,10 +3,12 @@
 
 <head>
     <title>Education</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <style>
         .company{
             color: brown;
             background-color: aquamarine;
+            font-family: "Sofia", sans-serif;
         }
         #sub{
             color: red;
