Remove the iframe border
Remove the iframe border

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </h3>
     </nav>
 
-    <iframe name="my frame" height="500px" width="1000px"></iframe><br>
+    <iframe name="my frame" height="500px" width="1000px" frameborder="0"></iframe><br>
 
     <hr>
     <footer>
