add the background color header
add the background color header

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
             font-family:"Trirong", serif ;
             text-transform: uppercase;
             text-decoration: none;
+            background-color: rgb(217, 217, 202);
 
 
         }
-        div{
-            text-align: right;
-        }
+        
     
     </style>
 
