collapse the table border and reg form changes
collapse the table border and reg form changes

--- a/reg.html
+++ b/reg.html
@@ -52,8 +52,8 @@
             </tr>
             <tr>
                 <td><label for="">MARRITIAL STATUS :</label></td>
-                <TD><input type="radio"><label> YES</label>
-                <input type="radio"><label>NO</label></TD>
+                <TD><input type="radio" name="MARRITIAL STATUS"><label> YES</label>
+                <input type="radio" name="MARRITIAL STATUS"><label>NO</label></TD>
             </tr>
             <tr>
                 <td><label>SKILLS :</label></td>
