--- a/hobbies.html
+++ b/hobbies.html
@@ -3,13 +3,23 @@
 
 <head>
     <title>Hobbies</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
+    <style>
+        .hobbbies{
+            font-family: 'Stylish', sans-serif; ;
+            color: brown;
+            list-style: georgian;
+        }
+    </style>
 
 </head>
 
 <body>
     <ul>
         <li>
-            <h3>Writing / Blogging</h3>
+            <h3 class="hobbbies">Writing / Blogging</h3>
             <p>Writing is a great hobby for programmers. You can combine your passion of writing with your passion for
                 programming. Keeping a journal or writing a novel for fun can give you a great experience. Also, it is
                 an amazing way of keeping a record of all what you’re thinking and memories.</p>
@@ -18,7 +28,7 @@
 
     <ul>
         <li>
-            <h3> Reading</h3>
+            <h3 class="hobbbies"> Reading</h3>
             <p>47.4% of survey respondents had this as a hobby. Curl up in your favorite chair and read on to find out
                 whodunit. I’m sure several of you have read a book series which was then turned into a movie like Harry
                 Potter and thought: “The books were SO much better. The movie left out a lot of details and changed too
@@ -26,7 +36,7 @@
                 to write, love to read!</p>
         </li>
     </ul>
-    <ul><li><h3>Board Games</h3><p>A survey shows that 24.6% programmers love to play serious board games. Playing board games is one of the best ways to connect with people. While a lot of people choose video games over this, but it just doesn’t give that personal feeling. This doesn’t mean that you cannot play board games online, there are sites where you can play it with people across the globe.</p></li></ul>
+    <ul><li><h3 class="hobbbies">Board Games</h3><p>A survey shows that 24.6% programmers love to play serious board games. Playing board games is one of the best ways to connect with people. While a lot of people choose video games over this, but it just doesn’t give that personal feeling. This doesn’t mean that you cannot play board games online, there are sites where you can play it with people across the globe.</p></li></ul>
 </body>
 
 </html>
