add the background image of the home page
add the background image of the home page

--- a/homePage.html
+++ b/homePage.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <title>Home Page</title>
+    <style>
+        body{
+            background-image: url("banner1.jpg");
+            height: auto;
+            width: auto;
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1>Home Page</h1>
-    <p></p>
+    
+   
     
 </body>
 </html>
