--- a/project.html
+++ b/project.html
@@ -4,19 +4,23 @@
     <title>Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
     <style>
-
+        #project{
+            font-family: 'Josefin Sans', sans-serif;;
+            color: brown;
+            text-transform: uppercase;
+        }
     </style>
 
     
     
 </head>
 <body>
-    <h1>Project</h1>
-    <p><strong> Project Name:</b></strong>Online Furniture Shop</p>
-    <p><h3>Detail Description of Technology Used</h3>
-        <b>HTML, CSS, PHP [Front End]:</b>
+    <h1 id="project">Project</h1>
+    <strong> Project Name:</b></strong>Online Furniture Shop
+    <h3 id="project">Detail Description of Technology Used</h3>
+    <p> <b>HTML, CSS, PHP [Front End]:</b>
         There are two kinds of language have a use in “GS Foods” one is programming language and other is database language. Front end, I have used PHP, JavaScript, html, CSS and backend, I have used MySQL database language in my “GS Foods”.
         Programming language and markup language : JavaScript, PHP,HTML. Color script language : CSS.
         Database language : MySQL.</p>
