add the font style to the project page
add the font style to the project page

--- a/project.html
+++ b/project.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <title>Project</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <style>
         #project{
-            font-family: 'Josefin Sans', sans-serif;;
+            font-family: 'Poppins', sans-serif;
             color: brown;
             text-transform: uppercase;
         }
