--- a/hobbies.html
+++ b/hobbies.html
@@ -12,21 +12,24 @@
             color: brown;
            
         }
+        #ol_list{
+            list-style:square ;
+        }
     </style>
 
 </head>
 
 <body>
-    <ul>
+    <ol id="ol_list" >
         <li>
             <h3 class="hobbbies">Writing / Blogging</h3>
             <p>Writing is a great hobby for programmers. You can combine your passion of writing with your passion for
                 programming. Keeping a journal or writing a novel for fun can give you a great experience. Also, it is
                 an amazing way of keeping a record of all what you’re thinking and memories.</p>
         </li>
-    </ul>
+    </ol>
 
-    <u>
+    <ol id="ol_list">
         <li>
             <h3 class="hobbbies"> Reading</h3>
             <p>47.4% of survey respondents had this as a hobby. Curl up in your favorite chair and read on to find out
@@ -35,8 +38,8 @@
                 many things.” I found many developers in hashnode who love to read, so it's clear that people who love
                 to write, love to read!</p>
         </li>
-    </ul>
-    <ul><li><h3 class="hobbbies">Board Games</h3><p>A survey shows that 24.6% programmers love to play serious board games. Playing board games is one of the best ways to connect with people. While a lot of people choose video games over this, but it just doesn’t give that personal feeling. This doesn’t mean that you cannot play board games online, there are sites where you can play it with people across the globe.</p></li></ul>
+    </ol>
+    <ol id="ol_list"><li><h3 class="hobbbies">Board Games</h3><p>A survey shows that 24.6% programmers love to play serious board games. Playing board games is one of the best ways to connect with people. While a lot of people choose video games over this, but it just doesn’t give that personal feeling. This doesn’t mean that you cannot play board games online, there are sites where you can play it with people across the globe.</p></li></ol>
 </body>
 
 </html>
