increase the frame size
increase the frame size

--- a/homePage.html
+++ b/homePage.html
@@ -5,8 +5,8 @@
     <style>
         body{
             background-image: url("banner1.jpg");
-            height: auto;
-            width: auto;
+            margin: auto;
+            padding: auto;
             
         }
     </style>
