--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             padding: 0;
             overflow-x: hidden;
         }
+        #person{
+            font-size: larger;
+        }
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -75,7 +78,7 @@
     <hr>
     <footer>
 
-        <big><b>Follow Us:</b></big>
+        <big><b id="person">Follow Us:</b></big>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
