--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="shortcut icon" href="rg.jpg" type="image/x-icon">
     <style>
-        big {
-            color: brown;
-        }
+       
         div {
 
             background-color: rgb(225, 217, 209);
+            text-align: right;
 
         }
 
@@ -37,6 +36,7 @@
         }
         #person{
             font-size: larger;
+            color: brown;
         }
     </style>
 
