--- a/reg.html
+++ b/reg.html
@@ -13,10 +13,12 @@
             height: 10px;
 
         }
+       
     </style>
 </head>
 
 <body>
+    <h1>Registration form</h1>
     <form>
         <table>
             <tr>
@@ -29,7 +31,7 @@
             </tr>
             <tr>
                 <td><label>PASSWORD :</label></td>
-                <td><input type="text" placeholder="............."></td>
+                <td><input type="password" placeholder="............."></td>
             </tr>
             <tr>
                 <td><label>MOBILE NO :</label></td>
@@ -76,10 +78,11 @@
         <td><input type="text" value="INDIA" readonly> </td></tr>
         <tr>
             <td>ADDRESS :</td>
-            <td><textarea value="TAL-MANGALWEDHA DIST-SOLAPUR" name="" id="" cols="30" rows="10"></textarea></td>
+            <td><textarea  name="ADDRESS" id="" cols="30" rows="10"></textarea></td>
         </tr>
         <tr>
-            <td><button>SUBMIT</button></td>
+            <td><input type="SUBMIT"></td>
+            <td> <input type="reset"></td>
         </tr>
         </table>
     </form>
