add the my audio
add the my audio

--- a/css_basic.html
+++ b/css_basic.html
@@ -2,26 +2,49 @@
 <html>
 
 <head>
-    <title>
-        CSS Basic
-    </title>
+    <title>my Profile </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="images5.jpg" type="image/x-icon">
     <style>
-        .person{
-            color: aqua;
+        nav {
+            text-transform: uppercase;
+            font-size: x-large;
+            font-family: 'Poppins', sans-serif;;
+            text-decoration: none;
         }
-        .demo{
-            color: brown;
+           
+        #ro{
+            text-align: right;
+            
         }
     </style>
 </head>
 
 <body>
-    <h3 style="color:red ;"> My name is Mohit Sharma</h3>
-    <p> I am Engineering Graduates</p>
-    <h2 class="demo">currently working in TCS</h2>
-    <h3 class="person">my dad is farmer</h3>
-    <h3 id="">ADDRESS : PUNE</h3>
-    <!-- <h4> Address: PUNE</h4> -->
+    <header id="ro">
+        <h3><Strong>
+                <i class="fa-solid fa-user-secret"></i>&nbsp;&nbsp;&nbsp;&nbsp;Rohit &nbsp;&nbsp;&nbsp;&nbsp;
+                <i class="fa-solid fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;7219250465&nbsp;&nbsp;&nbsp;&nbsp;
+                <i class="fa-sharp fa-solid fa-envelopes-bulk"></i>&nbsp;&nbsp;&nbsp;&nbsp;rohit.b@gmail.com
+            </Strong></h3>
+    </header>
+    <div><h3>
+        <nav>
+            <a href="homepage.html" target="my frame">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="project.html" target="my frame">About</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="gallery.html" target="my frame">Gallery</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="index.html" target="my frame">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        </nav></h3>
+    </div>
+
+    <iframe name="my frame" src="" height="500px" width="1200px" frameborder="0"></iframe>
+
 
 </body>
+
 </html>
