--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,13 @@
     </details>
     <details>
         <summary>My images</summary>
-        <img src="rg.jpg" alt="image" sizes="" height="300px" width="300px">
+        <img src="rg.jpg" alt="image" sizes=" height="300px" width="300px">
         <img src="images1.jpg" alt=""height="300px" width="300px">
         <img src="images2.jpg" alt=""height="300px" width="300px">
+    </details>
+    <details>
+        <summary>My Audios</summary>
+        <audio src="Saiyaara.mp3" controls></audio>
     </details>
 
 </body>
