remove code from not use
remove code from not use

--- a/project.html
+++ b/project.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <h1 id="project">Project</h1>
-    <strong> Project Name:</b></strong>Online Furniture Shop
+    <strong> Project Name:</strong>Online Furniture Shop
     <h3 id="project">Detail Description of Technology Used</h3>
     <p> <b>HTML, CSS, PHP [Front End]:</b>
         There are two kinds of language have a use in “GS Foods” one is programming language and other is database language. Front end, I have used PHP, JavaScript, html, CSS and backend, I have used MySQL database language in my “GS Foods”.
