add contact page
add contact page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="project.html" target="my frame">PROJECT</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="hobbies.html" target="my frame">HOBBIES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="gallery.html" target="my frame">GALLERY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="">OTHERS</a>
+            <a href="contact.html" target="my frame">CONTACT</a>
 
 
         </h3>
