contact page add the font color
contact page add the font color

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,32 @@
 <html lang="en">
 <head>
     <title>CONTACT</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
+<style>
+    .con{
+        font-family: 'Stylish', sans-serif;
+        color: brown;
+    }
+    #container{
+        color: rgb(6, 165, 61);
+        font-family: 'Style Script', cursive;
+    }
+    .imag{
+       image-resolution: initial;
+    }
+</style>
 </head>
 <body>
-    <h1>GET IN TOUCH</h1>
-    <h3>Address :</h3>
+    <h1 id="container">GET IN TOUCH</h1>
+    <h3 class="con">Address :</h3>
     Solapur,Maharashtra,INDIA <br>
-    <h3>Mobile No:</h3>
+    <img src="banner1.jpg" alt="" class="imag" height="500px" width="250px">
+    <h3 class="con">Mobile No:</h3>
     7219250465
-    <h3>Email :</h3>
+    <h3 class="con">Email :</h3>
     Rohitbapugaikwad@hotmail.com
+    
 </body>
 </html>
