add the new code
add the new code

--- a/contact.html
+++ b/contact.html
@@ -14,16 +14,18 @@
         color: rgb(6, 165, 61);
         font-family: 'Style Script', cursive;
     }
+
 </style>
 </head>
 <body>
     <h1 id="container">GET IN TOUCH</h1>
-    <h3 class="con">Address :</h3>
-    Solapur,Maharashtra,INDIA <br>
-    <h3 class="con">Mobile No:</h3>
-    7219250465
-    <h3 class="con">Email :</h3>
-    Rohitbapugaikwad@hotmail.com
+    <strong class="con">Address :</strong>
+    <p> Solapur,Maharashtra,INDIA </p>
+    <strong class="con">Mobile No:</strong>
+   <p> 7219250465</p>
+    <strong class="con">Email :</strong>
+    <p> Rohitbapugaikwad@hotmail.com</p>
+
     
 </body>
 </html>
