add the image project
add the image project

--- a/project.html
+++ b/project.html
@@ -15,6 +15,7 @@
     
 </head>
 <body>
+    <img src="banner3.jpg" alt="img" height="200px" width="400px" align="right">
     <h1 id="project">Project</h1>
     <strong> Project Name:</strong>Online Furniture Shop
     <h3 id="project">Detail Description of Technology Used</h3>
