new add nav bar
new add nav bar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     &nbsp;&nbsp;<i class="fa-sharp fa-solid fa-mobile"></i> &nbsp;&nbsp;7219250465</h3></strong>
 
         </div>
-    </header>
+    </header><hr>
     <nav id="nav_bar">
         <h3>
 
@@ -69,7 +69,7 @@
 
 
         </h3>
-    </nav>
+    </nav><hr>
 
     <iframe name="my frame" height="500px" width="1200px" frameborder="0px"></iframe><br>
 
