add the padding and margin
add the padding and margin

--- a/education.html
+++ b/education.html
@@ -21,6 +21,10 @@
         #ul_list{
             list-style: square;
         }
+        #ul_list,li{
+                margin: 20px;
+                   
+        }
     </style>
     
 </head>
