--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="shortcut icon" href="rg.jpg" type="image/x-icon">
     <style>
-       
         div {
 
             background-color: rgb(225, 217, 209);
@@ -32,9 +31,19 @@
 
         }
 
-        #person{
+        #nav_bar,
+        a {
+            margin-right: 40px;
+        }
+
+        #person a {
             font-size: larger;
             color: brown;
+            margin-right: 40px;
+
+        }
+        .text_pad{
+            margin-right: 40px;
         }
     </style>
 
@@ -47,39 +56,36 @@
 <body>
     <header>
         <div>
-
-            <h3><strong class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i
-                        class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit
-                    Gaikwad &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<i class="fa-solid fa-envelope"></i>
-                    &nbsp;&nbsp;rohit.b@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;<i class="fa-sharp fa-solid fa-mobile"></i> &nbsp;&nbsp;7219250465</h3></strong>
-
+         <span class="text_pad">   <i class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit Gaikwad </span>
+         <span class="text_pad">   <i class="fa-solid fa-envelope"></i> rohit.b@gmail.com</span>
+         <span class="text_pad">   <i class="fa-sharp fa-solid fa-mobile"></i> 7219250465</span>
         </div>
-    </header><hr>
+    </header>
+    <hr>
     <nav id="nav_bar">
-        <h3>
-
-            <a href="homePage.html" target="my frame">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="techStack.html" target="my frame">TECHSTACK</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="education.html" target="my frame">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="project.html" target="my frame">PROJECT</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="hobbies.html" target="my frame">HOBBIES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="gallery.html" target="my frame">GALLERY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="contact.html" target="my frame">CONTACT</a>
 
 
-        </h3>
-    </nav><hr>
+        <a href="homePage.html" target="my frame">HOME</a>
+        <a href="techStack.html" target="my frame">TECHSTACK</a>
+        <a href="education.html" target="my frame">EDUCATION</a>
+        <a href="project.html" target="my frame">PROJECT</a>
+        <a href="hobbies.html" target="my frame">HOBBIES</a>
+        <a href="gallery.html" target="my frame">GALLERY</a>
+        <a href="contact.html" target="my frame">CONTACT</a>
+
+
+
+    </nav>
+    <hr>
 
     <iframe name="my frame" height="500px" width="1200px" frameborder="0px"></iframe><br>
 
     <hr>
     <footer>
 
-        <big><b id="person">Follow Us:</b></big>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <b id="person">Follow Us:
+        <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a>
+        <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
 
     </footer>
