add the margin of the footer
add the margin of the footer

--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
 
         #person a {
             font-size: larger;
-            color: brown;
-            margin-right: 40px;
+            margin-left: 20px;
 
         }
-        .text_pad{
+
+        .text_pad {
             margin-right: 40px;
+            font-size: larger;
+        }
+        .text_footer {
+            font-size:x-large ;
+            color: rgb(231, 63, 63);
+            margin: right 40px; ;
+            
         }
     </style>
 
@@ -56,15 +63,13 @@
 <body>
     <header>
         <div>
-         <span class="text_pad">   <i class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit Gaikwad </span>
-         <span class="text_pad">   <i class="fa-solid fa-envelope"></i> rohit.b@gmail.com</span>
-         <span class="text_pad">   <i class="fa-sharp fa-solid fa-mobile"></i> 7219250465</span>
+            <span class="text_pad"> <i class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit Gaikwad </span>
+            <span class="text_pad"> <i class="fa-solid fa-envelope"></i> rohit.b@gmail.com</span>
+            <span class="text_pad"> <i class="fa-sharp fa-solid fa-mobile"></i> 7219250465</span>
         </div>
     </header>
     <hr>
     <nav id="nav_bar">
-
-
         <a href="homePage.html" target="my frame">HOME</a>
         <a href="techStack.html" target="my frame">TECHSTACK</a>
         <a href="education.html" target="my frame">EDUCATION</a>
@@ -72,9 +77,6 @@
         <a href="hobbies.html" target="my frame">HOBBIES</a>
         <a href="gallery.html" target="my frame">GALLERY</a>
         <a href="contact.html" target="my frame">CONTACT</a>
-
-
-
     </nav>
     <hr>
 
@@ -83,10 +85,10 @@
     <hr>
     <footer>
 
-        <b id="person">Follow Us:
-        <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a>
-        <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+         <span class="text_footer">Follow Us:</span> 
+           <span id="person"> <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a></span>
+           <span id="person"> <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin"></i></a></span>
+           <span id="person"> <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></span>
 
     </footer>
 </body>
