--- a/hobbies.html
+++ b/hobbies.html
@@ -14,6 +14,8 @@
         }
         #ol_list{
             list-style:square ;
+            margin:40px;
+            padding: 0px;
         }
     </style>
 
