change the text align to center
change the text align to center

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+            text-align: center;
 
 
         }
@@ -39,18 +40,24 @@
         #person a {
             font-size: larger;
             margin-left: 20px;
+            text-align: center;
 
         }
 
         .text_pad {
             margin-right: 40px;
             font-size: larger;
+            text-align: center;
         }
         .text_footer {
             font-size:x-large ;
             color: rgb(231, 63, 63);
             margin: right 40px; ;
+            text-align: center;
             
+        }
+        #name{
+            text-align: center;
         }
     </style>
 
@@ -63,7 +70,7 @@
 <body>
     <header>
         <div>
-            <span class="text_pad"> <i class="fa-solid fa-user">&nbsp;&nbsp;</i>Rohit Gaikwad </span>
+            <span class="text_pad"> <i class="fa-solid fa-user"></i>Rohit Gaikwad </span>
             <span class="text_pad"> <i class="fa-solid fa-envelope"></i> rohit.b@gmail.com</span>
             <span class="text_pad"> <i class="fa-sharp fa-solid fa-mobile"></i> 7219250465</span>
         </div>
@@ -83,7 +90,7 @@
     <iframe name="my frame" height="500px" width="1200px" frameborder="0px"></iframe><br>
 
     <hr>
-    <footer>
+    <footer id="name">
 
          <span class="text_footer">Follow Us:</span> 
            <span id="person"> <a href="https://www.google.co.in/"><i class="fa-brands fa-google"></i></a></span>
