techstack ad the border and padding and margin
techstack ad the border and padding and margin

--- a/techStack.html
+++ b/techStack.html
@@ -5,13 +5,18 @@
     <title> Technology Stack</title>
     <style>
         
-        table{
-              border-collapse: collapse;
+        table,tr,th,td{
+              border: 2px solid black;
               width: 500px;
+              border-collapse: collapse;
         }
         tr:nth-child(even){
             background-color: rgb(197, 248, 248);
-
+        }
+        table,tr,th,td{
+            padding: 15px;
+            margin: 20px;
+            text-align: center;
         }
     </style>
 
