nac bar shadow change
nac bar shadow change

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             text-align: center;
             margin-right: 16px;
             margin-left: 16px;
-            text-shadow: cadetblue;
-    
+           
         }
         #nav_bar,
         a:hover{
             color: rgb(227, 10, 10);
+            text-shadow: 4px 5px 5px #0a7beb;
+
+
         }
 
         #person a {
@@ -62,6 +64,7 @@
         nav{
             padding: 15px;
             text-shadow: 4px 2px 5px #2c3e50;
+
 
         }
         .text_mar{
