--- a/education.html
+++ b/education.html
@@ -9,6 +9,7 @@
             color: brown;
             background-color: rgb(194, 243, 226);
             font-family: "Sofia", sans-serif;
+            text-shadow: 5px 2px 3px rgb(222, 88, 90);
             
         }
         #sub{
