--- a/project.html
+++ b/project.html
@@ -8,18 +8,22 @@
             font-family: 'Poppins', sans-serif;
             color: brown;
             text-transform: uppercase;
+            font-size:x-large;
+            text-shadow: 3px 4px 3px rgb(218, 76, 76)
+        }
+        .proj{
+            font-size: larger;
+            text-shadow: 3px 4px 3px rebeccapurple;
         }
     </style>
-
-    
-    
 </head>
 <body>
     <img src="banner3.jpg" alt="img" height="200px" width="400px" align="right">
     <h1 id="project">Project</h1>
     <strong> Project Name:</strong>Online Furniture Shop
     <h3 id="project">Detail Description of Technology Used</h3>
-    <p> <b>HTML, CSS, PHP [Front End]:</b>
+    <span class="proj">HTML, CSS, PHP [Front End]:</span>
+    <p> 
         There are two kinds of language have a use in “GS Foods” one is programming language and other is database language. Front end, I have used PHP, JavaScript, html, CSS and backend, I have used MySQL database language in my “GS Foods”.
         Programming language and markup language : JavaScript, PHP,HTML. Color script language : CSS.
         Database language : MySQL.</p>
