add the footer section hover
add the footer section hover

--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
             font-size: larger;
             
         }
-        .text_footer {
+        .text_footer{
             font-size:x-large ;
             color: rgb(231, 63, 63);
             margin: right 40px; 
             margin-left: 20px;
             text-align: center;
+            font-weight: bolder;
             
         }
         #name{
@@ -70,6 +71,9 @@
         .text_mar{
                  margin-left: 20px;
                  margin-right: 20px;
+        }
+        .text_footer:hover{
+            color: rgb(229, 45, 186);
         }
 
     </style>
