--- a/info.html
+++ b/info.html
@@ -3,9 +3,46 @@
 
 <head>
     <title> Info Page</title>
+    <style>
+        .pad{
+            border: 5px solid cadetblue;
+            width: 250px;
+            height: 250px;
+            /* padding-left: 50px;
+            padding-top: 30px;
+            padding-right: 60px;
+            padding-bottom: 40px; */
+            padding: 30px 60px 40px 50px;
+
+        }
+        .box2{
+            border: 5px solid red;
+            height: 500px;
+            width: 500px;
+        padding: 30px 20px;
+        }
+        .box2{
+            border: 5px solid rgb(32, 33, 33);
+            width: 150px;
+            height: 150px;
+            /* margin-left: 40px;
+            margin-top: 20px; */
+            margin-top: 150px;
+        }
+        li::before{
+            content: "Rohit";
+        }
+
+    </style>
 </head>
 
 <body>
+    <div class="pad">
+        I am rohit gaikwad
+    </div>
+    <div class="box2">
+        I am rohit gaikwad
+    </div>
     <h3> I am UI Developer </h3>
     <h4> Technology stack is</h4>
     <ul>
