add the pseudo element add before and after
add the pseudo element add before and after

--- a/info.html
+++ b/info.html
@@ -32,6 +32,9 @@
         li::before{
             content: "Rohit";
         }
+        div::after{
+            content: "Hello";
+        }
 
     </style>
 </head>
