selection element it is used
selection element it is used

--- a/info.html
+++ b/info.html
@@ -35,6 +35,9 @@
         div::after{
             content: "Hello";
         }
+        li::selection{
+            background-color: rgb(211, 3, 100);
+        }
 
     </style>
 </head>
