pseudo selection element used
pseudo selection element used

--- a/education.html
+++ b/education.html
@@ -26,6 +26,10 @@
         #ul_list,li{
                 margin: 20px;   
         }
+        #ul_list li::selection{
+            background-color: brown;
+               
+        }
     </style>
     
 </head>
